--- a/Error/error.html
+++ b/Error/error.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Error 404 - Página no encontrada</title>
-    <link rel="stylesheet" href="../CSS/principal.css">
+    <link rel="stylesheet" href="../CSS/principal.css" title="claro">
+    <link rel="alternate stylesheet" href="../CSS/oscuro.css" title="oscuro">
 </head>
 <body>
     <main>
