--- a/A/indexa.html
+++ b/A/indexa.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Índice A - MediUA</title>
-    <link rel="stylesheet" href="../CSS/principal.css">
+    <link rel="stylesheet" href="../CSS/principal.css" title="claro">
+    <link rel="alternate stylesheet" href="../CSS/oscuro.css" title="oscuro">
+    <link rel="alternate stylesheet" href="../CSS/bajo_contraste.css" title="bajo contraste">
+    <link rel="alternate stylesheet" href="../CSS/aumento.css" title="tamaño aumentado">
+    <link rel="alternate stylesheet" href="../CSS/accesible.css" title="accesible">
     <script src="https://kit.fontawesome.com/39dc941603.js" crossorigin="anonymous"></script>
 </head>
 <body>
