--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
     <header>
         <h1><a href="index.html">MediUA</a></h1> <!--Para usarse como reinicio y para mantener la consitencia-->
     </header>
-    <nav class="breadcrumb-container" aria-label="migas de pan">
-        <span class="breadcrumb-label">Estás en:</span>
-        <ul class="breadcrumbs">
-            <li class="breadcrumb-item">Enciclopedia médica</li>
-        </ul>
-    </nav>
+    <div class="breadcrumb-container">
+        <span class="breadcrumb-label">Estás en:</span> <!--Etiqueta para lectores de pantalla y para que esté todo en una misma línea-->
+        <nav aria-label="migas de pan">
+            <ol class="breadcrumbs">
+                <li class="breadcrumb-item">Enciclopedia médica</li>
+            </ol>
+        </nav>
+    </div>
     <main id="contenido">
         <h2>Bienvenido a a la página principal de MediUA</h2>
         <p>MediUA es una enciclopedia médica digital diseñada para ofrecer información clara, confiable y accesible sobre una amplia variedad de temas relacionados con la salud. Su objetivo principal es acercar el conocimiento médico tanto a profesionales como a estudiantes y público general, combinando rigor científico con un lenguaje comprensible.</p>
