--- a/index.html
+++ b/index.html
@@ -67,7 +67,32 @@
             <img src="Imagenes/melanoma.jpg" alt="Melanoma">
             <figcaption>Cáncer de piel con bordes irregulares</figcaption>
         </figure>
-        <p>El cáncer de piel es un tipo de cáncer que comienza como una <mark>proliferación</mark> de células en la piel. Las células pueden invadir y destruir los tejidos sanos del cuerpo. A veces, las células pueden desprenderse y diseminarse a otras partes del cuerpo. <a href="https://www.mayoclinic.org/es/diseases-conditions/skin-cancer/symptoms-causes/syc-20377605">Seguir leyendo sobre el cáncer de piel</a></p>
+        <p>El cáncer de piel es un tipo de cáncer que comienza como una <mark>proliferación</mark> de células en la piel. Las células pueden invadir y destruir los tejidos sanos del cuerpo. A veces, las células pueden desprenderse y diseminarse a otras partes del cuerpo.</p>
+        <nav class="descargas" aria-label="descargar artículos sobre el cancer de piel">
+            <h5 id="descargas-cancer">Seguir leyendo sobre el cáncer de piel</h5>
+            <ul>
+            <li>
+                <a href="Documentos/cancer_piel_A.pdf" type="application/pdf" aria-label="Descargar versión en PDF accesible sobre cáncer de piel">
+                📄 Descargar en PDF la versión accesible
+                </a>
+            </li>
+            <li>
+                <a href="Documentos/cancer_piel_A.docx" type="application/vnd.openxmlformats-officedocument.wordprocessingml.document" aria-label="Descargar versión en Word accesible sobre cáncer de piel">
+                📝 Descargar en Word (.docx) la versión accesible
+                </a>
+            </li>
+            <li>
+                <a href="Documentos/cancer_piel_noA.pdf" type="application/pdf" aria-label="Descargar versión en PDF no accesible sobre cáncer de piel">
+                📄 Descargar en PDF la versión no accesible
+                </a>
+            </li>
+            <li>
+                <a href="Documentos/cancer_piel_noA.docx" type="application/vnd.openxmlformats-officedocument.wordprocessingml.document" aria-label="Descargar versión en Word no accesible sobre cáncer de piel">
+                📝 Descargar en Word (.docx) la no versión accesible
+                </a>
+            </li>
+            </ul>
+        </nav>
         <h4>Neumotórax</h4>
         <figure>
             <img src="Imagenes/neumotorax.jpg" alt="Neumotórax">
