--- a/Navegacion/mapa_web.html
+++ b/Navegacion/mapa_web.html
@@ -46,6 +46,12 @@
                             </ul>
                         </li>
                         <li>
+                            <a href="../Complementario/constantes.html">Constantes vitales</a>
+                        </li>
+                        <li>
+                            <a href="../Complementario/diabetes.html">Diabetes</a>
+                        </li>
+                        <li>
                             <a href="../Usuario/perfil.html">Perfil de usuario</a>
                         </li>
                         <li>
