--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
             <img src="Imagenes/aparatos.png" alt="" class="decorativo">
         </figure>
         <p>En esta página encontrarás información sobre los rangos de las constantes vitales. <a href="Complementario/constantes.html">Ir a la tabla de constantes vitales</a></p>
+        <h4>Diabetes</h4>
+        <figure class="decorativo_css">
+            <img src="Imagenes/diabetes.png" alt="" class="decorativo">
+        </figure>
+        <p>En esta página encontrarás vídeos sobre la diabetes. <a href="Complementario/diabetes.html">Ir a los vídeos sobre la diabetes</a></p>
     </section>
     <nav aria-label="Enlaces de creación de perfil de usuario y contacto">
         <ul>
