--- a/Complementario/diabetes.html
+++ b/Complementario/diabetes.html
@@ -34,9 +34,13 @@
                     <source src="Diabetes.mp4" type="video/mp4">
                     <track src="captions_es.vtt" kind="subtitles" srclang="es" label="Español">
                     <track src="captions_en.vtt" kind="subtitles" srclang="en" label="English">
+                    <track src="captions_es.vtt" kind="descriptions" srclang="en" label="Español">
+                    <track src="descriptions_en.vtt" kind="descriptions" srclang="no" label="English">
                 </video>
             </p>
-            <div class="amara-embed" data-url="http://www.youtube.com/watch?v=Y1zHEqMD5X0" data-team="null"></div>
+            <div id="video-amara">
+                <div class="amara-embed" data-url="http://www.youtube.com/watch?v=Y1zHEqMD5X0" data-team="null"></div>
+            </div>
         </section>
     </main>
     <footer>
