--- a/Complementario/diabetes.html
+++ b/Complementario/diabetes.html
@@ -41,6 +41,31 @@
             <div id="video-amara">
                 <div class="amara-embed" data-url="http://www.youtube.com/watch?v=Y1zHEqMD5X0" data-team="null"></div>
             </div>
+            <h3>Transcipciones</h3>
+            <nav aria-label="transcipciones">
+                <ul>
+                    <li>
+                        <a href="../Transcripciones/transcripcion_basica_es.txt">
+                        🗒️ Ver la transcripcion basica en español
+                        </a>
+                    </li>
+                    <li>
+                        <a href="../Transcripciones/transcripcion_basica_en.txt">
+                        🗒️ Ver la transcripcion basica en inglés
+                        </a>
+                    </li>
+                    <li>
+                        <a href="../Transcripciones/transcripcion_completa_es.txt">
+                        🗒️ Ver la transcripcion completa en español
+                        </a>
+                    </li>
+                    <li>
+                        <a href="../Transcripciones/transcripcion_completa_en.txt">
+                        🗒️ Ver la transcripcion completa en inglés
+                        </a>
+                    </li>
+                </ul>
+            </nav>
         </section>
     </main>
     <footer>
