--- a/Complementario/constantes.html
+++ b/Complementario/constantes.html
@@ -84,7 +84,7 @@
             <ul>
                 <li><a href="../index.html">Volver a la página principal</a></li>
                 <li><a href="../Navegacion/mapa_web.html">Mapa del sitio web</a></li>
-                <li><a href="../Declaracion/declaracion.html">Declaración de accesibilidad</a></li>
+                <li><a href="../Declaracion/declaracion.html">Accesibilidad</a></li>
             </ul>
         </nav>
     </footer>
