--- a/Complementario/diabetes.html
+++ b/Complementario/diabetes.html
@@ -28,7 +28,7 @@
         <h2>Diabetes</h2>
         <p>La diabetes es una enfermedad crónica que se produce cuando el cuerpo no puede regular correctamente los niveles de glucosa (azúcar) en la sangre. Esto ocurre porque el páncreas no produce suficiente insulina, o porque el organismo no la utiliza de forma eficaz. La insulina es una hormona esencial que permite que la glucosa entre en las células para proporcionarles energía. Sin un control adecuado, la diabetes puede provocar complicaciones graves en órganos como el corazón, los riñones, los ojos y los nervios.</p>
         <section>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/Y1zHEqMD5X0?si=BiWGsWEBkd3Ah-ZW" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Y1zHEqMD5X0?si=BiWGsWEBkd3Ah-ZW" title="Vídeo de youtube sobre la diabetes" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <p>
                 <video width="560" height="315" controls>
                     <source src="Diabetes.mp4" type="video/mp4">
@@ -79,7 +79,7 @@
             <ul>
                 <li><a href="../index.html">Volver a la página principal</a></li>
                 <li><a href="../Navegacion/mapa_web.html">Mapa del sitio web</a></li>
-                <li><a href="../Declaracion/declaracion.html">Declaración de accesibilidad</a></li>
+                <li><a href="../Declaracion/declaracion.html">Accesibilidad</a></li>
             </ul>
         </nav>
     </footer>
