--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
             <img src="Imagenes/diabetes.png" alt="" class="decorativo">
         </figure>
         <p>En esta página encontrarás vídeos sobre la diabetes. <a href="Complementario/diabetes.html">Ir a los vídeos sobre la diabetes</a></p>
+        <h4>Esquizofrenia</h4>
+            <iframe src="https://mediua9.wordpress.com" title="Blog sobre la esquizofrenia"></iframe>
     </section>
     <nav aria-label="Enlaces de creación de perfil de usuario y contacto">
         <ul>
@@ -144,7 +146,7 @@
             <ul>
                 <li><a href="index.html">Volver a la página principal</a></li> <!--Para no tener que subir-->
                 <li><a href="Navegacion/mapa_web.html">Mapa del sitio web</a></li>
-                <li><a href="Declaracion/declaracion.html">Declaración de accesibilidad</a></li>
+                <li><a href="Declaracion/declaracion.html">Accesibilidad</a></li>
             </ul>
         </nav>
     </footer>
