--- a/Declaracion/declaracion.html
+++ b/Declaracion/declaracion.html
@@ -79,7 +79,7 @@
             <ul>
                 <li><a href="../index.html">Volver a la página principal</a></li>
                 <li><a href="../Navegacion/mapa_web.html">Mapa del sitio web</a></li>
-				<li><a href="declaracion.html">Declaración de accesibilidad</a></li>
+				<li><a href="declaracion.html">Accesibilidad</a></li>
             </ul>
         </nav>
     </footer>
