--- a/Navegacion/mapa_web.html
+++ b/Navegacion/mapa_web.html
@@ -76,7 +76,7 @@
             <ul>
                 <li><a href="../index.html">Volver a la página principal</a></li>
                 <li><a href="mapa_web.html">Mapa del sitio web</a></li>
-                <li><a href="../Declaracion/declaracion.html">Declaración de accesibilidad</a></li>
+                <li><a href="../Declaracion/declaracion.html">Accesibilidad</a></li>
             </ul>
         </nav>
     </footer>
