--- a/index.html
+++ b/index.html
@@ -72,23 +72,23 @@
             <h5 id="descargas-cancer">Seguir leyendo sobre el cáncer de piel</h5>
             <ul>
             <li>
-                <a href="Documentos/cancer_piel_A.pdf" type="application/pdf" aria-label="Descargar versión en PDF accesible sobre cáncer de piel">
+                <a href="Documentos/cancer_piel_A.pdf" type="application/pdf" aria-label="Descargar versión en PDF accesible">
                 📄 Descargar en PDF la versión accesible
                 </a>
             </li>
             <li>
-                <a href="Documentos/cancer_piel_A.docx" type="application/vnd.openxmlformats-officedocument.wordprocessingml.document" aria-label="Descargar versión en Word accesible sobre cáncer de piel">
-                📝 Descargar en Word (.docx) la versión accesible
+                <a href="Documentos/cancer_piel_A.docx" type="application/vnd.openxmlformats-officedocument.wordprocessingml.document" aria-label="Descargar versión en Word accesible">
+                📝 Descargar en Word la versión accesible
                 </a>
             </li>
             <li>
-                <a href="Documentos/cancer_piel_noA.pdf" type="application/pdf" aria-label="Descargar versión en PDF no accesible sobre cáncer de piel">
+                <a href="Documentos/cancer_piel_noA.pdf" type="application/pdf" aria-label="Descargar versión en PDF no accesible">
                 📄 Descargar en PDF la versión no accesible
                 </a>
             </li>
             <li>
-                <a href="Documentos/cancer_piel_noA.docx" type="application/vnd.openxmlformats-officedocument.wordprocessingml.document" aria-label="Descargar versión en Word no accesible sobre cáncer de piel">
-                📝 Descargar en Word (.docx) la no versión accesible
+                <a href="Documentos/cancer_piel_noA.docx" type="application/vnd.openxmlformats-officedocument.wordprocessingml.document" aria-label="Descargar versión en Word no accesible">
+                📝 Descargar en Word la no versión accesible
                 </a>
             </li>
             </ul>
