--- a/Declaracion/declaracion.html
+++ b/Declaracion/declaracion.html
@@ -25,48 +25,54 @@
 			</nav>
 		</div>
 	<main>
-		<h2>Declaración de Accesibilidad de <span class="basic-information website-name">MediUA</span></h2>
-		<p>
-			MediUA se ha comprometido a hacer accesible su sitio web, de conformidad con el Real Decreto 1112/2018, de 7 de septiembre, sobre accesibilidad de los sitios web y aplicaciones para dispositivos móviles del sector público.
-		</p>
-		<p>
-			Esta es una declaración de accesibilidad de <span class="basic-information organization-name">MediUA</span>.
-		</p>
-		<h3>Estado de conformidad</h3>
-		<p>
-			Las <a href="https://www.w3.org/WAI/standards-guidelines/wcag/" lang="en" hreflang="en"><abbr title="Web Content Accessibility Guidelines">WCAG</abbr></a> (Pautas de Accesibilidad para el Contenido Web) definen requisitos para que los diseñadores y desarrolladores mejoren la accesibilidad para las personas con discapacidad. Define tres niveles de conformidad: Nivel A, Nivel AA y Nivel AAA.
-			<span class="basic-information website-name">MediUA</span>
-			es
-			<span class="basic-information conformance-status" data-printfilter="lowercase">parcialmente conforme</span>
-			con
-			<span class="basic-information conformance-standard"><span><abbr title="Web Content Accessibility Guidelines">WCAG</abbr> 2.2 nivel A</span>.</span>
-			<span>
-			<span class="basic-information conformance-status">Parcialmente conforme</span>
-			significa que
-			<span class="basic-information conformance-meaning">algunas partes del contenido no cumplen completamente con el estándar de accesibilidad</span>.
-		</span>
-		</p>
-		<h4>Consideraciones adicionales de accesibilidad</h4>
-		<p class="basic-information conformance-additions">Aunque nuestro objetivo es cumplir con el nivel A de conformidad de las <abbr title="Web Content Accessibility Guidelines">WCAG</abbr> 2.2, también hemos aplicado algunos Criterios de Éxito del nivel AA: Orientación, ningún evento/actividad depende de la orientación. Identificar el objetivo de entrada, no hay campos de entrada ambiguos. Contraste (mínimo), todas las páginas cumplen el mínimo contraste. Cambiar el tamaño de texto, no se pierde la estructura con el aumento del tamaño al 200%. Imágenes de texto, no se usa texto dentro de las imágenes. En todas las páginas se usa texto real al alcance de lectores de pantalla. Reflujo, no se pierde la estructura con el aumento del tamaño al 400%. Contraste no textual, se mantiene el contraste necesario en botones, gráficos. Varias maneras, se puede acceder al mismo contenido mediante varias opciones (menú navegación o enlaces entre páginas). Encabezados y etiquetas, todos los títulos y etiquetas describen el propósito de su contenido sin ambigüedad. Foco visible, el usuario sabe en todo momento dónde se encuentra el foco al navegar por teclado, ya sea mediante un borde negro o la barra vertical parpadeando en los campos. Foco no tapado (mínimo), no se oculta el foco en ninguna página. Idioma de las partes, cuando ocurre un cambio de idioma está indicado. Navegación consistente, todas las páginas tienen la misma estructura de navegación.<br><br>Y algunos Criterios de Éxito del nivel AAA: Identificar el objetivo, se usan landmarks para identificar regiones. Contraste (mejorado), todas las páginas cumplen el contraste mejorado. Teclado (sin excepción), funcionalidad completa mediante teclado. Sin límite de tiempo, ningún evento/actividad presenta límite de tiempo. Ubicación y propósito del enlace (solo enlace), en todo momento el usuario es capaz de localizar en qué parte de la página web se encuentra gracias a las migas de pan y el mapa del sitio web situados en todas las páginas. Encabezados de sección, cada sección tiene un título claro con jerarquía definida. Foco no tapado (mejorado), no se oculta el foco en ninguna página. Mecanismos de entrada simultánea, no se restringe el modo de entrada. Abreviaturas, todas las abreviaturas están definidas con el atributo title de la etiqueta &lt;abbr&gt;. Nivel de lectura, debido a la naturaleza de la página web, la estructura de las frases es comprensible, pero el vocabulario médico empleado requiere un conocimiento previo. Cambios de contexto pedidos, la información no se actualiza sola en ninguna página.</p>
-		<h3>Comentarios</h3>
-		<p>
-			Agradecemos sus comentarios sobre la accesibilidad de
-			<span class="basic-information website-name">MediUA</span>.
-			Por favor, háganos saber si encuentra barreras de accesibilidad en
-			<span class="basic-information website-name">MediUA</span>:
-		</p>
-		<ul class="basic-information feedback h-card">
-			<li>
-			Correo electrónico:
-			<a class="email u-email" href="mailto:mediua@gmail.com">mediua@gmail.com</a>
-		</li>
-		</ul>
-		<h3>Fecha</h3>
-		<p>
-			Esta declaración fue creada el
-			<span class="basic-information statement-created-date">15 de octubre de 2025</span>
-			usando la <a href="https://www.w3.org/WAI/planning/statements/" lang="en" hreflang="en">Herramienta Generadora de Declaraciones de Accesibilidad del <abbr title="World Wide Web Consortium">W3C</abbr></a>.
-		</p>
+		<h2>Declaración de Accesibilidad de MediUA</h2>
+			<p>
+				La enciclopedia médica MediUA se ha comprometido a hacer accesible su sitio web, de conformidad con el Real Decreto 1112/2018, de 7 de septiembre, sobre accesibilidad de los sitios web y aplicaciones para dispositivos móviles del sector público.
+			</p>
+			<p>
+				La presente declaración de accesibilidad se aplica a las páginas web del dominio mediua.github.io.
+			</p>
+		<h2>Situación de cumplimiento</h2>
+			<p>
+				Este sitio web es parcialmente conforme con el nivel AA de las <a href="https://www.w3.org/TR/WCAG21/"> Pautas de Accesibilidad para el contenido Web de la WCAG</a> en su versión 2.1, debido a las excepciones y a la falta de conformidad de los aspectos que se indican a continuación.
+			</p>
+		<h2>Contenido no accesible</h2>
+			<p>
+				Los vídeos incrustados de terceros no son accesibles ni pueden modificarse porque su contenido, configuración y características dependen exclusivamente de la plataforma o proveedor externo que los aloja.
+			</p>
+		<h2>Preparación de la presente declaración de accesibilidad</h2>
+			<p>
+				La presente declaración fue preparada el 27 de noviembre de 2025.
+			</p>
+			<p>
+				La presente declaración de accesibilidad ha sido preparada utilizando el siguiente método: La declaración se ha elaborado a partir de una autoevaluación interna realizada por el propio organismo, siguiendo los criterios establecidos en la Directiva (UE) 2016/2102 y empleando herramientas de comprobación automática de accesibilidad.
+			</p>
+			<p>
+				Última revisión de la declaración: 27 de noviembre de 2025.
+			</p>
+		<h2>Observaciones y datos de contacto</h2>
+			<p>
+				MediUA pone a disposición de las personas usuarias un mecanismo de comunicación accesible para informar sobre posibles incumplimientos de los requisitos de accesibilidad, así como para formular consultas o solicitar información y contenidos que estén excluidos del ámbito de aplicación de la Directiva (UE) 2016/2102.
+			</p>
+			<p>
+				Para ello, puede utilizarse el siguiente <a href="../Contacto/contacto.html">formulario de contacto</a>.
+			</p>
+		<h2>Procedimiento de aplicación</h2>
+			<p>
+				Si, una vez realizada una solicitud de información o una queja a través del mecanismo de comunicación, la respuesta recibida resulta insatisfactoria, o si no se obtiene respuesta en un plazo razonable, la persona interesada podrá presentar una reclamación a través del siguiente <a href="../Contacto/contacto.html">formulario de contacto</a>.
+			</p>
+			<p>
+				Las reclamaciones serán recibidas y tratadas por la Unidad Responsable de Accesibilidad de MediUA.
+			</p>
+			<p>
+				El organismo encargado de supervisar y garantizar el cumplimiento del procedimiento es:
+			</p>
+			<address>
+				Organismo: Unidad Responsable de Accesibilidad de MediUA<br>
+				Correo electrónico: mediua.accesible@hotmail.com<br>
+				Teléfono: 923 343 333<br>
+				Dirección: Carr. de San Vicente del Raspeig
+			</address>
 	</main>
 	<footer>
         <p>&copy; 2025 MediUA. Todos los derechos reservados.</p>
