--- a/Declaracion/declaracion.html
+++ b/Declaracion/declaracion.html
@@ -48,7 +48,7 @@
 				La presente declaración de accesibilidad ha sido preparada utilizando el siguiente método: La declaración se ha elaborado a partir de una autoevaluación interna realizada por el propio organismo, siguiendo los criterios establecidos en la Directiva (UE) 2016/2102 y empleando herramientas de comprobación automática de accesibilidad.
 			</p>
 			<p>
-				Última revisión de la declaración: 27 de noviembre de 2025.
+				Última revisión de la declaración: 4 de diciembre de 2025.
 			</p>
 		<h2>Observaciones y datos de contacto</h2>
 			<p>
