--- a/Declaracion/declaracion.html
+++ b/Declaracion/declaracion.html
@@ -45,7 +45,7 @@
 				La presente declaración fue preparada el 27 de noviembre de 2025.
 			</p>
 			<p>
-				La presente declaración de accesibilidad ha sido preparada utilizando el siguiente método: La declaración se ha elaborado a partir de una autoevaluación interna realizada por el propio organismo, siguiendo los criterios establecidos en la Directiva (UE) 2016/2102 y empleando herramientas de comprobación automática de accesibilidad.
+				La presente declaración de accesibilidad ha sido preparada utilizando el siguiente método: La declaración se ha elaborado a partir de una autoevaluación interna realizada por el propio organismo, siguiendo los criterios establecidos en la Directiva (UE) 2016/2102 y empleando herramientas de comprobación automática y manuales de accesibilidad.
 			</p>
 			<p>
 				Última revisión de la declaración: 4 de diciembre de 2025.
