--- a/Complementario/diabetes.html
+++ b/Complementario/diabetes.html
@@ -75,7 +75,7 @@
             <i class="fa-solid fa-envelope" aria-label="Correo" role="img"></i> Correo: pss78@alu.ua.es y esp96@alu.ua.es<br>
             <i class="fa-solid fa-house" aria-label="Casa" role="img"></i> Dirección: Carr. de San Vicente del Raspeig
         </address>
-        <nav aria-label="Navegación de regreso a página principal y mapa del sitio web">
+        <nav aria-label="Regreso a página principal, mapa del sitio web y declaración de accesibilidad">
             <ul>
                 <li><a href="../index.html">Volver a la página principal</a></li>
                 <li><a href="../Navegacion/mapa_web.html">Mapa del sitio web</a></li>
