--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </nav>
     </div>
     <main id="contenido">
-        <h2>Bienvenido a a la página principal de MediUA</h2>
+        <h2>Bienvenido a la página principal de MediUA</h2>
         <p>MediUA es una enciclopedia médica digital diseñada para ofrecer información clara, confiable y accesible sobre una amplia variedad de temas relacionados con la salud. Su objetivo principal es acercar el conocimiento médico tanto a profesionales como a estudiantes y público general, combinando rigor científico con un lenguaje comprensible.</p>
         <h3><a href="Buscador/buscador.html">Buscador de términos médicos</a></h3>
         <h3 class="indice">Índice alfabético:</h3>
@@ -142,7 +142,7 @@
             <i class="fa-solid fa-envelope" aria-label="Correo" role="img"></i> Correo: pss78@alu.ua.es y esp96@alu.ua.es<br>
             <i class="fa-solid fa-house" aria-label="Casa" role="img"></i> Dirección: Carr. de San Vicente del Raspeig
         </address>
-        <nav aria-label="Navegación de regreso a página principal y mapa del sitio web">
+        <nav aria-label="Regreso a página principal, mapa del sitio web y declaración de accesibilidad">
             <ul>
                 <li><a href="index.html">Volver a la página principal</a></li> <!--Para no tener que subir-->
                 <li><a href="Navegacion/mapa_web.html">Mapa del sitio web</a></li>
